--- a/slides/talk1_ComplexityHierarchyScale.Rmd
+++ b/slides/talk1_ComplexityHierarchyScale.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Сложность, иерархия и масштаб"
-subtitle: "Картографические базы данных. Лекция №1"
+subtitle: "Геоинформационное картографирование"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
 output:
@@ -27,11 +27,7 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE)
 
 1. Алгоритмы геометрической генерализации
 
-1. Алгоритмы семантической генерализации
-
-1. Теория картографических баз данных
-
-1. Мультимасштабное картографирование
+1. Моделирование процессов генерализации
 
 ---
 
@@ -125,10 +121,10 @@ knitr::include_graphics('img/talk1/t1_Tesler.png', dpi = 150)
 
 Простота как категория, противоположная сложности, бывает двух типов: *воспринимаемая* и *операционная* (Norman, 2010).
 
-1. **Воспринимаемая** простота связана с внешним видом вещи, количеством и разнообразием ее управляющих элементов.
-2. **Операционная** простота связана с использованием вещи.
+1. **Воспринимаемая** простота (_perceived simplicity_) связана с внешним видом вещи, количеством и разнообразием ее управляющих элементов.
+2. **Операционная** простота (_operational simplicity_) связана с использованием вещи.
 
-```{r workshop, fig.cap="Мастерская — типичный пример системы инструментов с высокой воспринимаемой простотой, но низкой операционной"}
+```{r workshop, fig.cap="Мастерская — типичный пример системы с низкой воспринимаемой простотой, но высокой операционной"}
 knitr::include_graphics('img/talk1/t1_Workshop.png', dpi = 200) 
 ```
 
@@ -178,6 +174,8 @@ knitr::include_graphics('img/talk1/t1_Workshop.png', dpi = 200)
 - Ключевым свойством сложных систем является их *само-структурирование* на уровни состояний, каждый из которых характеризуется некоторой степенью гомогенности.
 
 - Системы, далекие от равновесия способны самоорганизовываться иерархическим путем. Результирующие структуры, стабильные в пространстве  времени, носят название **диссипативных структур** (Nicolis and Prigogine, 1989).
+
+> Пример диссипативной структуры — общая циркуляция атмосферы, вызванная прежде всего неравномерным нагревом поверхности Земли.
 
 - Каждый уровень иерархии обладает своим собственным пространственным и временным масштабом. Процессы на более низких уровнях иерархии протекают быстрее, чем процессы более высокого уровня.
 
@@ -244,7 +242,6 @@ knitr::include_graphics('img/talk1/t1_Workshop.png', dpi = 200)
 *Ведущий — подчиненный*  |  Субордономия
 
 * **Таксономия** выводится в рамках *индуктивной* стратегии проектирования, которая основана на сравнении нескольких объектов и синтезе абстрактных свойств, обобщающих их характеристики.
-
 * **Партономия** выводится из одного объекта *дедуктивным* путем и представляет собой аналитическую операцию.
 
 ---
@@ -384,17 +381,11 @@ __MAUP__ (_Modifiable Areal Unit Problem_) — зависимость резул
 ## Многоуровневые классификации в географических науках
 
 * **Почвоведение**: ствол, отдел, тип, подтип, род, вид, разновидность и разряд
-
 * **Ландшафтоведение**: фация, урочище, местность и ландшафт
-
 * **Геоботаника**: ряд *фитоценомер* включает 11 уровней, начиная с фитоценозов и ассоциаций и заканчивая типами и свитами типов растительности.
-
 * **Метеорология**: масштабы процессов глобальный, синоптический, мезо, конвективных облаков и микро
-
 * **Океанология**: временные масштабы изменчивости океанологических полей: мелкомасштабные, мезомасштабные, синоптическая изменчивость, сезонные колебания, междугодичная, внутривековая, междувековая изменчивость
-
 * **Гидрология**: порядковые классификации рек
-
 * **Социально-экономическая география**: АТД, промышленные районы, транспортные районы, системы расселения.
 
 ---
@@ -414,7 +405,7 @@ __MAUP__ (_Modifiable Areal Unit Problem_) — зависимость резул
 ## Поле масштабов геоизображений (Берлянт, 1996)
 
 ```{r scales-field, fig.cap="А.М.Берлянт. Геоиконика. М. 1996"}
-knitr::include_graphics('img/talk1/t1_ScalesBerlyant.png', dpi = 150) 
+knitr::include_graphics('img/talk1/t1_ScalesBerlyant.png', dpi = 200) 
 ```
 
 ---
@@ -422,7 +413,7 @@ knitr::include_graphics('img/talk1/t1_ScalesBerlyant.png', dpi = 150)
 ## Поле пространственно-временных масштабов
 
 ```{r scales-processes, fig.cap="А.М.Берлянт. Теория геоизображений. М. 2006"}
-knitr::include_graphics('img/talk1/t1_ScalesTemporal.png', dpi = 200) 
+knitr::include_graphics('img/talk1/t1_ScalesTemporal.png', dpi = 250) 
 ```
 
 ---
