--- a/slides/talk2_ConceptualModels.Rmd
+++ b/slides/talk2_ConceptualModels.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Концептуальные модели картографической генерализации"
-subtitle: "Картографические базы данных. Лекция №2"
+subtitle: "Геоинформационное картографирование"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
 output:
