--- a/slides/talk3_PointSelection.Rmd
+++ b/slides/talk3_PointSelection.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Отбор точечных объектов"
-subtitle: "Картографические базы данных. Лекция №3"
+subtitle: "Геоинформационное картографирование"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
 output:
@@ -178,6 +178,75 @@ knitr::include_graphics("img/talk3/stl-spacing.png")
 
 ---
 
+##  Параметризация масштабного коэффициента $C$
+
+В методе Settlement spacing нельзя явным образом задать процент отбора точек или их желаемую густоту.
+
+Характер расселения влияет на интенсивность отбора населенных пунктов при различных значениях $C$.
+
+Чтобы установить характер этой зависимости и управлять интенсивностью отбора, необходимо для выбранной территории построить регрессионную модель зависимости между коэффициентом $C$ и результирующей графической нагрузкой.
+
+```{r, out.width = "80%", fig.cap=""}
+knitr::include_graphics("img/talk3/stl-spacing.png")
+```
+
+---
+
+##  Условная графическая нагрузка
+
+_Условная графическая нагрузка_ – взвешенное количество точек на единицу площади карты:
+
+$$\rho = \frac{\sum_k w_k N_k}{A},$$
+где $N_k$ — количество точек $k$-го класса, $w_k$ — весовой коэффициент $k$-го класса, который прямо пропорционален размеру значка, $A$ — площать расчетной ячейки (в $см^2$ карты).
+
+> В знаменателе формулы стоит площадь на карте, а не на местности.
+
+_Средняя условная графическая нагрузка_ рассчитывается путем осреднения нагрузки по ячейкам регулярной сети.
+
+---
+
+##  Средняя условная графическая нагрузка
+
+```{r, out.width = "100%", fig.cap=""}
+knitr::include_graphics("img/talk3/mean_density.png")
+```
+
+_Средняя условная графическая нагрузка_ рассчитывается путем осреднения условной графической нагрузки по ячейкам регулярной сети.
+
+---
+
+##  Параметризация масштабного коэффициента $C$
+
+Алгоритм построения модели:
+
+1. Построить регулярную сетку с шагом $h$, покрывающую заданное множество точек.
+
+2. Выполнить серию генерализаций множества точек путем отбора при разных значениях $C$.
+
+  > например, от $1000$ до $10000$ м с шагом $1000$ м.
+
+3. Для каждого уровня детализации рассчитать среднюю графическую нагрузку.
+
+4. Построить регрессионную зависимость вида $y = \alpha x^{-\beta},$ где $y$ — величина условной графической нагрузки, $x$ — значение константы $C$.
+
+---
+
+##  Параметризация масштабного коэффициента $C$
+
+```{r, out.width = "80%", fig.cap=""}
+knitr::include_graphics("img/talk3/stl-param.png")
+```
+
+---
+
+##  Параметризация масштабного коэффициента $C$
+
+```{r, out.width = "100%", fig.cap=""}
+knitr::include_graphics("img/talk3/mean_density.png")
+```
+
+---
+
 ## Алгоритм Circle-growth
 
 Радиус окружности $R = C \times W_i$ прямо пропорционален весу точки $W_i$.
@@ -195,34 +264,19 @@ knitr::include_graphics("img/talk3/circ-growth.png")
 
 ## Алгоритм эффективной площади
 
-2. Построить диаграмму Вороного точек в пределах минимальной оболочки.
-
-3. Вычислить веса каждой точки обратно пропорционально площади ее ячейки Вороного $W_i = A_i^{-1}$. Пометить все точки как активные.
-
-4. Удалить активную точку с наименьшим весом.
-
-5. Перестроить локально диаграмму Вороного для соседей точки первого порядка. Деактивировать соседей (запретить их удаление).
-
-6. Повторять шаги 4-5 для оставшихся точек, пока не будут деактивированы все точки или пока не будет достигнут требуемый процент отбора.
-
-7. Если не достигнут требуемый процент отбора точек, активировать все точки и перейти к шагу 4. В противном случае завершить обработку
-
-<!-- **Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002. -->
-
----
-
-## Алгоритм эффективной площади
+Данный алгоритм основан на удалении точек, которым соответствуют малые по площади ячейки диаграммы Вороного.
 
 .pull-left[
 **До:**
-```{r, out.width = "90%", fig.cap=""}
+
+```{r, out.width = "65%", fig.cap=""}
 knitr::include_graphics("img/talk3/effa_source.png")
 ```
 ]
-
 .pull-right[
 **После:**
-```{r, out.width = "90%", fig.cap=""}
+
+```{r, out.width = "65%", fig.cap=""}
 knitr::include_graphics("img/talk3/effa_result.png")
 ```
 ]
@@ -231,7 +285,7 @@ knitr::include_graphics("img/talk3/effa_result.png")
 
 ---
 
-## Локальное перестроение диаграммы Вороного
+## Перестроение диаграммы при удалении точки
 
 ```{r, out.width = "80%", fig.cap=""}
 knitr::include_graphics("img/talk3/effa_recalc.png")
@@ -244,9 +298,53 @@ knitr::include_graphics("img/talk3/effa_recalc.png")
 
 ---
 
+## Алгоритм эффективной площади
+
+2. Построить диаграмму Вороного точек в пределах минимальной оболочки.
+
+3. Вычислить веса каждой точки прямо пропорционально площади ее ячейки Вороного $W_i = A_i$. Пометить все точки как активные.
+
+4. Удалить активную точку с наименьшим весом.
+
+5. Перестроить локально диаграмму Вороного для соседей точки первого порядка. Деактивировать соседей (запретить их удаление).
+
+6. Повторять шаги 3-4 для оставшихся точек, пока не будут деактивированы все точки или пока не будет достигнут требуемый процент отбора.
+
+7. Если не достигнут требуемый процент отбора точек, активировать все точки и перейти к шагу 3. В противном случае завершить обработку
+
+<!-- **Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002. -->
+
+---
+
+## Алгоритм эффективной площади
+
+.pull-left[
+**До:**
+
+```{r, out.width = "90%", fig.cap=""}
+knitr::include_graphics("img/talk3/effa_source.png")
+```
+]
+
+.pull-right[
+**После:**
+
+```{r, out.width = "90%", fig.cap=""}
+knitr::include_graphics("img/talk3/effa_result.png")
+```
+]
+
+.small[**Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002.]
+
+---
+
 ## Алгоритм взвешенной эффективной площади
 
-Вес точки масштабируется пропорционально ее значимости, а не только эффективной площади: $W_i = С_i \times A_i^{-1}$, где параметр $С_i$ можно представить как средневзвешенную сумму баллов за факторы:
+Вес точки масштабируется пропорционально ее значимости, а не только эффективной площади: 
+
+$$W_i = С_i \times A_i,$$ 
+
+где параметр $С_i$ можно представить как средневзвешенную сумму баллов за факторы:
 
 $$С_i = \frac{\sum w_j f_{ij}}{\sum w_j}$$
 
