--- a/Ex01-PointSelection.Rmd
+++ b/Ex01-PointSelection.Rmd
@@ -88,31 +88,58 @@ __Требования к входным данным:__
 2. Подсчитывает суммарный графический вес точек в каждой ячейке и записывает результат в новое поле. Подсказка: вам понадобятся инструменты статистики (__Tabulate Intersection__), и присоединения поля (__Join Field__).
 3. Сохраняет полученную сетку в выходной файл.
 
+## Преобразование созданных моделей геообработки в инструменты Python Toolbox {-}
+
+В данной части задания необходимо переписать созданные модели на языке программирования Python и оформить их в виде инструмента геообработки _ArcGIS Python Toolbox_. 
+
+- Первая модель (отбор точек) переписывается совместно с преподавателем в классе.
+— Вторая модель (оценка условной графической нагрузки) переписывается самостоятельно.
+
+При выполнении задания в качестве справочника используется [__официальное руководство__](https://desktop.arcgis.com/ru/arcmap/latest/analyze/creating-tools/a-quick-tour-of-python-toolboxes.htm) по созданию инструментов _Python Toolbox_.
+
 ## Отбор населенных пунктов для карты масштаба 1:4 000 000 {-}
 
-В данной — заключительной — части задания необходимо произвести отбор населенных пунктов, используя собственные модели геообработки, а также произвести графическую оценку полученных результатов.
+В данной — заключительной — части задания необходимо произвести отбор населенных пунктов, используя собственные скрипты, а также произвести графическую оценку полученных результатов.
 
 __Алгоритм выполнения задания:__
 
-1. Скачать данные _OSM_ на территорию Субъекта Федерации
+1. Скачать данные _OSM_ на территорию Субъекта Федерации. _Не следует_ для выполнения работы брать субъекты с малым числом населенных пунктов (Мурманская область, Еврейская АО, Республика Кламыкия и т.п.).
+
 2. Перепроецировать слой `settlement-points` в наилучшую проекцию для выбранной территории
+
 3. Сформировать поля `Importance` и `Size`, используя следующее отображение атрибутов:
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 rosstat::include_table('tables/pointsel_params.xlsx', caption = 'Параметры заполнения полей')
 ```
 
-4. Используя фрагмент данных и значения параметра _Scale_ в диапазоне от $1000$ до $10000$ с шагом $1000$, подобрать регрессионную зависимость между  значением параметра масштабирования Scale и средней графической нагрузкой ($ед.~на~см^2$) в масштабе $1:4~000~000$. Средняя графическая нагрузка оценивается как среднее значение по всем ненулевым ячейкам регулярной сетки. Размер сетки — $1~см^2$ в результирующем масштабе.
-5. Выполнить отбор населенных пунктов с графической нагрузкой $1$, $3$ и $5$ населенных пункта на $см^2$ для масштаба $1:4~000~000$. Соответствующий параметр _Scale_ подберите, используя найденную регрессионную зависимость. 
-6. Оформить результаты в виде картосхемы, отображающей:
+4. Используя фрагмент данных и значения параметра $С$ (Scale) в диапазоне от $1000$ до $10000$ с шагом $1000$, подобрать регрессионную зависимость вида $y = \alpha x^{-\beta}$ между  значением параметра масштабирования $C$ (Scale) и средней графической нагрузкой ($ед.~на~см^2$) в масштабе $1:4~000~000$. Средняя графическая нагрузка оценивается как среднее значение по всем ненулевым ячейкам регулярной сетки. Размер сетки — $1~см^2$ в результирующем масштабе. 
+
+    > Для $С = 2000, 4000, 8000$ необходимо зафиксировать время работы инструмента, чтобы в дальнейшем сравнить его с временем работы модели геообработки.
+
+    Найденная зависимость должна иметь примерно следующий вид:
+
+    ```{r, echo = FALSE}
+    knitr::include_graphics("slides/img/talk3/stl-param.png")
+    ```
+
+5. Для значений параметра $C = 2000, 4000, 8000$ выполнить аналогичные вычисления с применением модели геообработки. Убедиться, что получается аналогичный результат и зафиксировать время выполнения обработки данных.
+
+6. Выполнить отбор населенных пунктов с графической нагрузкой $1$, $3$ и $5$ населенных пункта на $см^2$ для масштаба $1:4~000~000$. Соответствующий параметр $C$ (_Scale_) подберите, используя найденную регрессионную зависимость.
+
+7. Выполнить параметризацию параметра $x$ обобщенного закона _Топфера_ для трёх полученных генерализаций, исходя из предположения, что отношение результирующего и исходного масштаба равно $1:4$.
+
+8. Оформить результаты в виде серии карт, отображающей:
     - границу региона
     - множество исходных точек бледно-серым цветом
     - множество отобранных точек черным цветом соответствующего размера
     - подписи основных населенных пунктов
     - картограмму условной графической нагрузки
+  
+  Пример серии карт (вы можете упорядочить изображения другим путем — например, по вертикали):
     
-```{r, out.width = "80%", fig.cap="Пример оформления результатов работы"}
-knitr::include_graphics("img/selection.png")
+```{r, echo = FALSE}
+knitr::include_graphics("slides/img/talk3/mean_density.png")
 ```
 
 ## Отчет {-}
@@ -121,6 +148,14 @@ knitr::include_graphics("img/selection.png")
 
 - цель и задачи исследования, 
 - суть метода отбора точек, 
-- суть принципа оценки графической нагрузки, 
+- суть принципа оценки условной графической нагрузки, 
+- суть обобщенного закона Топфера, 
 - этапы создания моделей геообработки и их внешний вид, 
-- описание эксперимента по генерализации, включая постановку задачи, нахождение регрессионной зависимости, выполнение отбора.
+- технология создания инструментов Python Toolbox, определения их параметров и типов параметров
+- процесс преобразования моделей геообработки в инструменты Python Toolbox, фактические отличия скрипта и модели — какие инструменты переехали в неизменном виде, а что поменялось. 
+- описание эксперимента по генерализации, включая:
+    - постановку задачи, 
+    - нахождение регрессионной зависимости, 
+    - сравнение времени работы модели и скрипта, 
+    - выполнение отбора, 
+    - оценку результатов в графическом (карты условной нагрузки) и численном (параметризация обобщенного закона Топфера) виде.
