--- a/slides/talk5_PointAggregation.Rmd
+++ b/slides/talk5_PointAggregation.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Регионизация точечных объектов"
-subtitle: "Картографические базы данных. Лекция №5"
+subtitle: "Геоинформационное картографирование"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
 output:
@@ -84,7 +84,7 @@ knitr::include_graphics("img/talk3/convex_concave.png")
 
 2. Найти точку $p_1$, образующую наименьший угол поворота по часовой стрелке относительно направления оси $Y$. Добавить в результат.
 
-3. Найти все оставшиеся точки выпуклой оболочки $p_i, i = 2..k$, выбирая каждый раз такую точку $p_i$, что угол поворота от $p_{i-2} p_{i-1}$ к $p_{i-2} p_{i-1}$ наименьший. Остановиться, когда $p_i = p_0$
+3. Найти все оставшиеся точки выпуклой оболочки $p_i, i = 2..k$, выбирая каждый раз такую точку $p_i$, что угол поворота от $p_{i-2} p_{i-1}$ к $p_{i-1} p_{i}$ наименьший. Остановиться, когда $p_i = p_0$
 ]
 
 .right-40[
