--- a/Ex02-PointClustering.Rmd
+++ b/Ex02-PointClustering.Rmd
@@ -1,6 +1,6 @@
 # Задание №2. Кластеризация системы расселения {#points-clust-work}
 
-__Цель задания__ — освоение методов кластеризации и регионизации точек, а также построения центроидов. В качестве метода кластеризации предлагается использовать _DBSCAN_. В качестве метода построения региона — _альфа-оболочку_.
+__Цель задания__ — освоение методов кластеризации и регионизации точек, построения центроидов и оценки качества кластеризации. В качестве метода кластеризации предлагается использовать _DBSCAN_. В качестве метода построения региона — _альфа-оболочку_.
 
 Исходные данные: точки населенных пунктов из Самостоятельной работы №1.
 
@@ -8,7 +8,7 @@ __Цель задания__ — освоение методов кластери
 
 На данном этапе необходимо изучить принципы работы метода кластеризации DBSCAN, построения альфа-оболочки и центроида полигона:
 
-1. Метод DBSCAN доступен в виде инструмента Python, приложенного к данному заданию.
+1. Метод __DBSCAN__ доступен в виде инструмента Python, приложенного к данному заданию.
 2. Метод альфа-оболочки доступен в инструменте __Cartography Tools__ > __Generalization__ > __Aggregate Points__.
 3. Центроид полигона можно получить посредством применения инструмента __Data Management Tools__ > __Features__ > __Feature to Polygon__.
 
@@ -16,7 +16,7 @@ __Цель задания__ — освоение методов кластери
 
 ## Автоматизация выделения регионов и центроидов кластеров {-}
 
-Необходимо создать модель геообработки, которая будет принимать на вход слой маркированных точек и выдавать класс пространственных объектов с альфа-оболочками каждого кластера, а также центроидами кластеров
+Необходимо создать инструмент Python Toolbox, который будет принимать на вход слой маркированных точек и выдавать класс пространственных объектов с альфа-оболочками каждого кластера, а также центроидами кластеров
 
 __Параметры инструмента:__
 
@@ -33,14 +33,25 @@ __Требования к результатам:__
 
 __Рекомендации по выполнению:__
 
-1. Инструмент должен состоять из двух моделей. Первая модель принимает на вход все параметры и создает пустой полигональный класс пространственных объектов для добавления альфа-оболочек кластеров. Это класс вместе со всеми исходными параметрами передается в другую модель, которая будет наполнять его оболочками для каждого кластера.
-2. Для прохода по номерам кластеров используйте итератор типа __Iterate Field Values__ в режиме `Unique Values` (уникальные значения). Сделайте так, чтобы на выходе не создавались кластеры для точек-выбросов (идентификатор -1).
-3. Для полученных регионов кластеров необходимо выполнить операцию объединения __Dissolve__, так как они могут состоять из нескольких оболочек, касающихся в одной точке.
-4. В качестве расстояния кластеризации необходимо указывать удвоенное расстояние, использованное ранее в методе _DBSCAN_. В этом случае оболочки будут соответствовать исходным кластерам.
+1. Создайте пустой полигональный классы пространственных объектов для выходных полигонов (`CreateFeatureclass_management(...)`).
+2. Извлеките все значения поля, хранящего идентификаторы кластеров в список, используя `arcpy.da.SearchCursor(...)`.
+3. Преобразуйте полeченный список в множество (`set(...)`), чтобы оставить в нем только уникальные значения.
+4. Создайте слой для входного класса объектов точек (`MakeFeatureLayer_management(...)`).
+5. Организуйте цикл по элементам полученного на шаге 3 множества.
+6. Выберите точки, номер кластера которых совпадает с переменной цикла — текущим номером кластера (`SelectLayerByAttribute_management`).
+7. Для выбранных точек запустите процедуру регионизации (`AggregatePoints_cartography`).  В качестве расстояния кластеризации необходимо указывать удвоенное расстояние, использованное ранее в методе _DBSCAN_. В этом случае оболочки будут соответствовать исходным кластерам.
+8. Для полученных регионов кластеров необходимо выполнить операцию объединения (`Dissolve`), так как они могут состоять из нескольких оболочек, касающихся в одной точке.
+9. Рассчитайте количество точек в текущем кластере и запишите его в поле _Count_ текущего полигона.
+10. Добавьте текущий полигон в выходной полигональный класс.
+11. После выполнения цикла конвертируйте полигоны в выходные точки центроидов (`FeatureToPoint_management`).
+
+## Автоматизация расчета критериев качества кластеризации
+
+Необходимо самостоятельно реализовать инструмент, который рассчитывает критерии качества кластеризации: среднее внутрикластерное и межкластерное расстояния, а также их соотношение. Для реализации инструмента необходимо с помощью `arcpy.da.SearchCursor` прочесть координаты и номера кластеров всех точек, рассчитать все попарные расстояния между ними и далее агрегировать полученную информацию в виде искомых показателей.
 
 ## Кластеризация системы расселения субъекта {-}
 
-1. Cроецируйте исходные данные в проекцию, оптимальную для выбранного региона. 
+1. Cпроецируйте исходные данные в проекцию, оптимальную для выбранного региона. 
 2. Используя созданный инструмент, постройте серию из 5 кластеризаций населенных пунктов выбранного вами субъекта. Количество точек в кластере оставьте постоянным (3), но меняйте значение расстояния кластеризации. Расстояния подберите таким образом, чтобы различия в кластеризации были очевидны и помогали выявлять пространственные группировки разного масштаба.
 3. Рассчитайте для каждой кластеризации меры качества: среднее внутрикластерное и межкластерное расстояние, их отношение. Сведите их в таблицу.
 4. Для каждого уровня кластеризации подготовьте изображение, включающее: а) исходные точки, б) регионы кластеров, в) центроиды кластеров. Точки и регионы должны быть помечены разными цветами по номерам кластеров. Центроиды должны быть показаны окружностями радиуса, пропорционального количеству входящих точек. 
@@ -58,7 +69,7 @@ knitr::include_graphics("img/clustering.png")
 
 1. Цель и задачи работы.
 2. Описание алгоритмов DBSCAN, построения альфа-оболочки и центроида полигона.
-3. Описание процесса создания моделей геообработки для выделения регионов и центроидов кластеров.
+3. Описание процесса создания скриптов для выделения регионов и центроидов кластеров, а также расчета критериев качества кластеризации.
 4. Серию из 5 карт кластерной структуры системы расселения региона, полученную по результатам кластеризации.
 5. Анализ качества кластеризации (согласно рассчитанным критериям).
 6. Географический анализ результатов. Насколько реалистично выглядят полученные кластеры, к чему они привязаны? Можно ли выявить полимасштабность организации системы расселения на основе полученных изображений?
