--- a/slides/talk4_PointClustering.Rmd
+++ b/slides/talk4_PointClustering.Rmd
@@ -837,7 +837,7 @@ knitr::include_graphics("img/talk3/dbscan_face.gif")
 
 ### Выбор параметров
 
-.pull-left[Для определения оптимальной величины $\epsilon$ рекомендуется построить функцию среднего расстояния до $minPts-1$ ближайших соседей в зависимости от $\epsilon$. Оптимальными считаются значения $\epsilon$, при которых наблюдается наиболее интенсивное изменение роста функции (перегиб)]
+.pull-left[Для определения оптимальной величины $eps$ рекомендуется построить функцию среднего расстояния до $minPts-1$ ближайших соседей в зависимости от $eps$. Оптимальными считаются значения $eps$, при которых наблюдается наиболее интенсивное изменение роста функции (перегиб)]
 
 .pull-right[
 ```{r, out.width = "100%", fig.cap=""}
