--- a/Ex03-LineSimplification.Rmd
+++ b/Ex03-LineSimplification.Rmd
@@ -2,31 +2,73 @@
 
 **Цель задания** --- освоение методики геометрического упрощения линий.
 
-**Аннотация**. Необходимо реализовать метод Ли-Оупеншоу для генерализации линий. Для этого в среде Model Builder создается модель геообработки, осуществляющая последовательный запуск инструментов ArcToolbox. После создания инструмента необходимо сравнить результаты работы алгоритма с тем, что получается при обработке линий посредством алгоритма Дугласа-Пейкера, Ванга-Мюллера и Висвалингам-Уайатта. Задание выполняется в ГИС-пакете ArcGIS 10.5.
+**Аннотация**. Необходимо реализовать метод Ли-Оупеншоу для генерализации линий. Для этого на языке программирования Python создается инструмент Python Toolbox, осуществляющий последовательный запуск инструментов ArcToolbox. Помимо этого релаизуются инструменты для вычисления коэффициента относительной извилистости и модифицированного расстояния Хаусдорфа. После создания инструмента необходимо сравнить результаты работы алгоритма с тем, что получается при обработке линий посредством алгоритма Дугласа-Пейкера, Ванга-Мюллера и Висвалингам-Уайатта. Задание выполняется в ГИС-пакете ArcGIS.
+
+## Теоретические сведения
+
+### Алгоритмы генерализации
 
 **Алгоритм Ли-Оупеншоу** [@Li:1992jg] использует «естественный принцип», суть которого заключается в удалении деталей, размер которых менее видимой величины. Для этого на исходное множество линий накладывается регулярная сет ка ячеек с разрешением *d* Участок линии, пересекающий ячейку, имеет точку входа в нее и точку выхода. Этот участок заменяется на середину отрезка, соединяющего две данные точки. Таким образом, удаляются все изгибы, находящиеся внутри ячеек. Принцип работы алгоритма иллюстрирует Рис. \@ref(fig:lio). Видно, что по своему поведению результирующая линия похожа на скользящее среднее.
 
-```{r lio, out.width = "50%", fig.cap="Принцип работы алгоритма Ли-Оупеншоу"}
+```{r lio, out.width = "50%", echo = FALSE, fig.cap="Принцип работы алгоритма Ли-Оупеншоу"}
 knitr::include_graphics("img/li-openshaw.png")
 ```
 
 В основе работы **алгоритма Ванга-Мюллера** [@Wang:1998eh] лежит сегментация линий на отдельные изгибы. Изгиб определяется как участок линии, на котором угол ее поворота сохраняет свой знак. Важным аспектом алгоритма является четкий алгоритм вычисления вершины изгиба, которая определяется как точка, имеющая максимальную сумму расстояний до начальной и конечной точки изгиба. Для каждого изгиба в алгоритме Ванга-Мюллера определяется его размер, изолированность, близость и схожесть с соседним изгибом. Изолированные изгибы подвергаются преувеличению. Расположенные рядом схожие изгибы объединяются в один путем слияния вершин и удаления изгиба между ними. Наконец, изгибы малого размера удаляются. Данные операции проиллюстрированы на Рис. \@ref(fig:wang). В ArcGIS метод Ванга-Мюллера реализован в инструменте **Simplify Line** (режим *BEND\_SIMPLIFY*).
 
-```{r wang, out.width = "100%", fig.cap="Элементы алгоритма Ванга-Мюллера: а) удаление; б) объединение; в) преувеличение изгибов"}
+```{r wang, out.width = "100%", echo = FALSE, fig.cap="Элементы алгоритма Ванга-Мюллера: а) удаление; б) объединение; в) преувеличение изгибов"}
 knitr::include_graphics("img/wang-muller.png")
 ```
 
 Алгоритм **Дугласа-Пейкера** [@Douglas:1973if] относится к алгоритмам редуцирования точек и основан на последовательном нахождении узлов линии, образующих максимальное отклонение от стягивающей хорды (Рис. \@ref(fig:douglas)). В ArcGIS метод Дугласа-Пейкера реализован в инструменте **Simplify Line** (режим *POINT\_REMOVE*).
 
-```{r douglas, out.width = "80%", fig.cap="Принцип работы алгоритма Дугласа-Пейкера"}
+```{r douglas, out.width = "80%", echo = FALSE, fig.cap="Принцип работы алгоритма Дугласа-Пейкера"}
 knitr::include_graphics("img/douglas.png")
 ```
 
 Наконец, **алгоритм Висвалингам-Уайатта** [@Visvalingam:1993hx] относится к алгоритмам редуцирования точек и основан на последовательном удалении точек, углы которых образуют минимальную эффективную площадь (Рис. \@ref(fig:visvalingam)). В ArcGIS данный алгоритм представлен в модификации Жу и Джонса [@zhou:2005], где каждая площадь приобретает различный вес в зависимости от пропорций угла линии и реализован в инструменте **Simplify Line** (режим *WEIGHTED\_AREA*).
 
-```{r visvalingam, out.width = "100%", fig.cap="Принцип работы алгоритма Висвалингам-Уайатта"}
+```{r visvalingam, out.width = "100%", echo = FALSE, fig.cap="Принцип работы алгоритма Висвалингам-Уайатта"}
 knitr::include_graphics("img/visvalingam.png")
 ```
+
+### Модифицированное расстояние Хаусдорфа
+
+### Коэффициент относительной извилистости
+
+__Коэффициент извилистости__ — мера извилистости объекта, вычисляемая как отношение длины линии к длине отрезка, соединяющего ее концы. Пусть линия $L$ состоит из $n$ узлов, соединенных ребрами. Тогда коэффициент ее извилистости будет равен:
+
+$$K = \frac{\sum_{i=1}^{n-1} l_{i, i+1}}{l_{1,n}}$$ 
+
+где $l_{i,k}$ — Евклидово расстояние между i-м и k-м узлом линии. 
+
+Коэффициент извилистости зависит от конфигурации сглаживающей, описывающей общую траекторию линии. В предельном случае, когда имеют дело с замкнутой фигурой, величина $К$ не определена, т.к. длина стягивающей хорды равняется нулю. Чтобы избежать этого, можно вычислить отношение длины линии не к стягивающей, а к сглаживающей, т.е. вычислить _относительную извилистость_. Для этого можно сегментировать линию одним из двух способов: либо сдвигаться на одинаковое значение стягивающей хорды, либо сдвигаться вдоль самой линии с равным шагом. Второй подход вычислительно более эффективен, так как он не требует поиска пересечения с окружностью, а также поиска следующей по ходу линии точки (пересечений может быть несколько в случае извилистой линии). Коэффициент относительной извилистости, вычисляемый при таком подходе, имеет следующий вид:
+
+$$\overline{K} = \frac{\sum_{j=1}^{m} K_j}{m}$$ 
+
+где $K_j$ — коэффициент извилистости для $k$-го сегмента линии, $m$ — число сегментов.
+
+```{r sinuosity, out.width = "100%", echo = FALSE, fig.cap="Подходы к вычислению коэффициента относительной извилистости: а) с фиксированной длиной стягивающей хорды; б) с фиксированной длиной сегмента линии"}
+knitr::include_graphics("img/sinuosity.png")
+```
+
+> При вычислении относительной извилистости средствами ГИС разбиение линии на сегменты можно заменить разрезанием линии регулярной сеткой ячеек. В этом случае коэффициент $K_j$ будет вычисляться для сегмента линии, попавшего в $j$-й квадрат.
+
+### Модифицированное расстояние Хаусдорфа
+
+Модифицированное расстояние Хаусдорфа (MHD), широко используется как метрика оценки геометрической точности линий. 
+
+Пусть даны два множества точек $\mathcal{A} = \lbrace a_1,...,a_{N_a} \rbrace$ и $\mathcal{B} = \lbrace b_1,...,b_{N_b} \rbrace$. Тогда среднее расстояние между $\mathcal{A}$ и $\mathcal{B}$ может быть вычислено как $\overline{d}(\mathcal{A},\mathcal{B}) = \frac{1}{N_a}\sum_{a \in \mathcal{A}}d(a,\mathcal{B})$, где $d(a, \mathcal{B}) = \min_{b \in \mathcal{B}}\lVert a - b \rVert$. Аналогично, обратное расстояние между $\mathcal{B}$ и $\mathcal{A}$ вычисляется как $\overline{d}(\mathcal{B},\mathcal{A}) = \frac{1}{N_b}\sum_{b \in \mathcal{B}}d(b,\mathcal{A})$, где $d(b, \mathcal{A}) = \min_{a \in \mathcal{A}}\lVert b - a \rVert$.
+
+Имея прямое и обратное расстоения между $\mathcal{A}$ и $\mathcal{B}$, модифицированное расстояние Хаусдорфа MHD вычисляется как:
+
+  $$
+  	MHD(\mathcal{A}, \mathcal{B}) = max\big(\overline{d}(\mathcal{A},\mathcal{B}), \overline{d}(\mathcal{B},\mathcal{A})\big),
+  $$
+
+Грубо говоря, MHD есть есть максимальное из средних расстояний от $\mathcal{A}$ к $\mathcal{B}$ и от $\mathcal{B}$ к $\mathcal{A}$. Чем меньше значение MHD, тем интегрально ближе $\mathcal{A}$ и $\mathcal{B}$ друг к другу. Введение этой метрики вдохновлено классическим расстоянием Хаусдорфаа (в котором $d(\mathcal{A},\mathcal{B}) = max_{a \in \mathcal{A}} d(a,\mathcal{B})$), которое, как видно из определения, чувствительно к точкам-выбросам, поскольку использует максимальное расстояние вместо среднего.
+
+При оценке геометрической точности в качестве множеств $\mathcal{A}$ и $\mathcal{B}$ используются ребра исходного и генерализованного множеств линий соответственно. 
 
 ## Часть 1. Автоматизация метода Ли-Оупеншоу {-} 
 
@@ -88,7 +130,7 @@ knitr::include_graphics("img/visvalingam.png")
 
 ### Автоматизация вычисления модифицрованного Хаусдорфова расстояния **MHD** (оценка геометрической точности) {-}
 
-Модель *Modified* *Hausdorff Distance* должна включать следующие этапы.
+Инструмент Python Toolbox *Modified* *Hausdorff Distance* должty включать следующие этапы.
 
 1. Конвертируйте исходную линию в точки (**Feature vertices to points**).
 
@@ -130,11 +172,11 @@ knitr::include_graphics("img/visvalingam.png")
 
 ### Автоматизация вычисления коэффициента относительной извилистости (оценка морфологического соответствия) {-}
 
-Создайте новую модель геообработки *Sinuosity*, модифицировав модель генерализации, созданную ранее для алгоритма Ли-Оупеншоу. Вам необходимо внутри каждого квадрата поделить длину исходной линии на длину отрезка, соединяющего точки пересечения с линиями сетки. А затем посчитать среднее из полученных значений (**Summary Statistics**).
+Создайте новый инструемнт Python Toolbox *Sinuosity*, модифицировав модель генерализации, созданную ранее для алгоритма Ли-Оупеншоу. Вам необходимо внутри каждого квадрата поделить длину исходной линии на длину отрезка, соединяющего точки пересечения с линиями сетки. А затем посчитать среднее из полученных значений (**Summary Statistics**).
 
 ### Отчет {-}
 
-Опишите ваш опыт разработки моделей оценки геометрической точности морфологического соответствия для линий. Сопроводите данный раздел отчета снимками экрана и примерами получаемых результатов 
+Опишите ваш опыт разработки инструментов оценки геометрической точности и морфологического соответствия для линий. Сопроводите данный раздел отчета снимками экрана и примерами получаемых результатов 
 
 ## Часть 3. Сравнение алгоритмов Ли-Оупеншоу, Ванга-Мюллера, Дугласа-Пейкера и Висвалингам-Уайатта {-}
 
@@ -154,7 +196,7 @@ knitr::include_graphics("img/visvalingam.png")
 
     a. При каких параметрах инструментов количество результирующих узлов линий одинаково?
     
-    b. Хаусдорфово расстояние. Насколько эффективно алгоритм использует точки? Какой из алгоритмов дает контур, наиболее близко повторяющий исходную кривую?
+    b. Модоифицированное хаусдорфово расстояние. Насколько эффективно алгоритм использует точки? Какой из алгоритмов дает контур, наиболее близко повторяющий исходную кривую?
     
     c. Относительная извилистость. Насколько сглаженным/угловатым получается изображение? Какой из алгоритмов дает значение извилистости более близкое к оригиналу?
     
