--- a/Ex03-LineSimplification.Rmd
+++ b/Ex03-LineSimplification.Rmd
@@ -34,6 +34,20 @@ knitr::include_graphics("img/visvalingam.png")
 
 ### Модифицированное расстояние Хаусдорфа
 
+Модифицированное расстояние Хаусдорфа (MHD), широко используется как метрика оценки геометрической точности линий. 
+
+Пусть даны два множества точек $\mathcal{A} = \lbrace a_1,...,a_{N_a} \rbrace$ и $\mathcal{B} = \lbrace b_1,...,b_{N_b} \rbrace$. Тогда среднее расстояние между $\mathcal{A}$ и $\mathcal{B}$ может быть вычислено как $\overline{d}(\mathcal{A},\mathcal{B}) = \frac{1}{N_a}\sum_{a \in \mathcal{A}}d(a,\mathcal{B})$, где $d(a, \mathcal{B}) = \min_{b \in \mathcal{B}}\lVert a - b \rVert$. Аналогично, обратное расстояние между $\mathcal{B}$ и $\mathcal{A}$ вычисляется как $\overline{d}(\mathcal{B},\mathcal{A}) = \frac{1}{N_b}\sum_{b \in \mathcal{B}}d(b,\mathcal{A})$, где $d(b, \mathcal{A}) = \min_{a \in \mathcal{A}}\lVert b - a \rVert$.
+
+Имея прямое и обратное расстоения между $\mathcal{A}$ и $\mathcal{B}$, модифицированное расстояние Хаусдорфа MHD вычисляется как:
+
+  $$
+  	MHD(\mathcal{A}, \mathcal{B}) = max\big(\overline{d}(\mathcal{A},\mathcal{B}), \overline{d}(\mathcal{B},\mathcal{A})\big),
+  $$
+
+Грубо говоря, MHD есть есть максимальное из средних расстояний от $\mathcal{A}$ к $\mathcal{B}$ и от $\mathcal{B}$ к $\mathcal{A}$. Чем меньше значение MHD, тем интегрально ближе $\mathcal{A}$ и $\mathcal{B}$ друг к другу. Введение этой метрики вдохновлено классическим расстоянием Хаусдорфаа (в котором $d(\mathcal{A},\mathcal{B}) = max_{a \in \mathcal{A}} d(a,\mathcal{B})$), которое, как видно из определения, чувствительно к точкам-выбросам, поскольку использует максимальное расстояние вместо среднего.
+
+При оценке геометрической точности в качестве множеств $\mathcal{A}$ и $\mathcal{B}$ используются ребра исходного и генерализованного множеств линий соответственно. 
+
 ### Коэффициент относительной извилистости
 
 __Коэффициент извилистости__ — мера извилистости объекта, вычисляемая как отношение длины линии к длине отрезка, соединяющего ее концы. Пусть линия $L$ состоит из $n$ узлов, соединенных ребрами. Тогда коэффициент ее извилистости будет равен:
@@ -53,22 +67,6 @@ knitr::include_graphics("img/sinuosity.png")
 ```
 
 > При вычислении относительной извилистости средствами ГИС разбиение линии на сегменты можно заменить разрезанием линии регулярной сеткой ячеек. В этом случае коэффициент $K_j$ будет вычисляться для сегмента линии, попавшего в $j$-й квадрат.
-
-### Модифицированное расстояние Хаусдорфа
-
-Модифицированное расстояние Хаусдорфа (MHD), широко используется как метрика оценки геометрической точности линий. 
-
-Пусть даны два множества точек $\mathcal{A} = \lbrace a_1,...,a_{N_a} \rbrace$ и $\mathcal{B} = \lbrace b_1,...,b_{N_b} \rbrace$. Тогда среднее расстояние между $\mathcal{A}$ и $\mathcal{B}$ может быть вычислено как $\overline{d}(\mathcal{A},\mathcal{B}) = \frac{1}{N_a}\sum_{a \in \mathcal{A}}d(a,\mathcal{B})$, где $d(a, \mathcal{B}) = \min_{b \in \mathcal{B}}\lVert a - b \rVert$. Аналогично, обратное расстояние между $\mathcal{B}$ и $\mathcal{A}$ вычисляется как $\overline{d}(\mathcal{B},\mathcal{A}) = \frac{1}{N_b}\sum_{b \in \mathcal{B}}d(b,\mathcal{A})$, где $d(b, \mathcal{A}) = \min_{a \in \mathcal{A}}\lVert b - a \rVert$.
-
-Имея прямое и обратное расстоения между $\mathcal{A}$ и $\mathcal{B}$, модифицированное расстояние Хаусдорфа MHD вычисляется как:
-
-  $$
-  	MHD(\mathcal{A}, \mathcal{B}) = max\big(\overline{d}(\mathcal{A},\mathcal{B}), \overline{d}(\mathcal{B},\mathcal{A})\big),
-  $$
-
-Грубо говоря, MHD есть есть максимальное из средних расстояний от $\mathcal{A}$ к $\mathcal{B}$ и от $\mathcal{B}$ к $\mathcal{A}$. Чем меньше значение MHD, тем интегрально ближе $\mathcal{A}$ и $\mathcal{B}$ друг к другу. Введение этой метрики вдохновлено классическим расстоянием Хаусдорфаа (в котором $d(\mathcal{A},\mathcal{B}) = max_{a \in \mathcal{A}} d(a,\mathcal{B})$), которое, как видно из определения, чувствительно к точкам-выбросам, поскольку использует максимальное расстояние вместо среднего.
-
-При оценке геометрической точности в качестве множеств $\mathcal{A}$ и $\mathcal{B}$ используются ребра исходного и генерализованного множеств линий соответственно. 
 
 ## Часть 1. Автоматизация метода Ли-Оупеншоу {-} 
 
@@ -104,11 +102,11 @@ knitr::include_graphics("img/sinuosity.png")
 
     > *Примечание*: *шаги g) -- j) нужны для того, чтобы середины соседних отрезков, полученные на шаге f) приобрели общий идентификатор для их соединения*.
 
-3. Создайте модель геообработки "LiOpenshaw Line Simplification".
+3. Создайте набор инструментов Python Toolbox "Line Simplification".
 
-4. Реализуйте последовательность действий, выполненную на шаге 2, в виде модели геообработки LiOpenshaw. 
+4. Реализуйте последовательность действий, выполненную на шаге 2, в виде инструмента геообработки LiOpenshaw. 
 
-5. Вынесите в качестве параметров модели следующие объекты:
+5. Вынесите в качестве параметров инструмента следующие объекты:
 
     a. Входной слой линий
     
@@ -120,11 +118,11 @@ knitr::include_graphics("img/sinuosity.png")
     
     e. Выходной слой линий
 
-6. Убедитесь, что для остальных параметров в модели стоит опция *Intermediate* (промежуточный).
+6. Убедитесь, что для остальных параметров в инструмента стоит опция *Intermediate* (промежуточный).
 
 7. Протестируйте инструмент на слое **Island**, используя разное разрешение (2-10 км)
 
-8. Изложите ваш опыт создания инструмента в отчете, включая краткое описание среды Model Builder, интерпретацию метода Ли-Оупеншоу в терминах инструмента геообработки, процесс создания модели и оформления ее параметров. Проиллюстрируйте текст снимками экрана.
+8. Изложите ваш опыт создания инструмента в отчете, включая интерпретацию метода Ли-Оупеншоу в терминах инструмента геообработки, процесс создания инструмента и оформления его параметров. Проиллюстрируйте текст снимками экрана.
 
 ## Часть 2. Автоматизация методов оценки геометрической точности и коэффициента относительной извилистости {-}
 
@@ -154,7 +152,7 @@ knitr::include_graphics("img/sinuosity.png")
     knitr::include_graphics("img/shift-vectors.png")
     ```
 
-    > Чтобы символика присваивалась автоматически по результатам выполнения модели геообработки, необходимо заготовить файл \*.lyr и положить его в туже папку, что и ваша модель. Далее в свойствах итогового класса объектов в Model Builder укажите созданный файл на вкладке *Layer Symbology*.
+    <!-- > Чтобы символика присваивалась автоматически по результатам выполнения модели геообработки, необходимо заготовить файл \*.lyr и положить его в туже папку, что и ваша модель. Далее в свойствах итогового класса объектов в Model Builder укажите созданный файл на вкладке *Layer Symbology*. -->
 
 10. Вычислите среднее расстояние от исходной линии до генерализованной путем осреднения поля _Shape\_Length_ (**Summary Statistics**)
 
@@ -162,7 +160,7 @@ knitr::include_graphics("img/sinuosity.png")
 
 12. Получите Модифицированное Хаусдорфово расстояние путем нахождения максимума из полученных значений (**Calculate Value**). Чтобы извлечь значения, используйте функцию **Get Field Value.**
 
-Модель должна включать следующие параметры:
+Инструмент должен включать следующие параметры:
 
 - Исходные линии
 
@@ -172,7 +170,7 @@ knitr::include_graphics("img/sinuosity.png")
 
 ### Автоматизация вычисления коэффициента относительной извилистости (оценка морфологического соответствия) {-}
 
-Создайте новый инструемнт Python Toolbox *Sinuosity*, модифицировав модель генерализации, созданную ранее для алгоритма Ли-Оупеншоу. Вам необходимо внутри каждого квадрата поделить длину исходной линии на длину отрезка, соединяющего точки пересечения с линиями сетки. А затем посчитать среднее из полученных значений (**Summary Statistics**).
+Создайте новый инструемнт Python Toolbox *Sinuosity*, модифицировав инструмент генерализации, созданный ранее для алгоритма Ли-Оупеншоу. Вам необходимо внутри каждого квадрата поделить длину исходной линии на длину отрезка, соединяющего точки пересечения с линиями сетки. А затем посчитать среднее из полученных значений (**Summary Statistics**).
 
 ### Отчет {-}
 
@@ -180,7 +178,7 @@ knitr::include_graphics("img/sinuosity.png")
 
 ## Часть 3. Сравнение алгоритмов Ли-Оупеншоу, Ванга-Мюллера, Дугласа-Пейкера и Висвалингам-Уайатта {-}
 
-Сравните результаты работы вашей модели и инструмента **Simplify Line** в режимах BEND\_SIMPLIFY (алгоритм Ванга-Мюллера), POINT\_REMOVE (алгоритм Дугласа-Пейкера) и WEIGHTED\_AREA (алгоритм Висвалингам-Уайатта).
+Сравните результаты работы вашего инструмента и инструмента **Simplify Line** в режимах BEND\_SIMPLIFY (алгоритм Ванга-Мюллера), POINT\_REMOVE (алгоритм Дугласа-Пейкера) и WEIGHTED\_AREA (алгоритм Висвалингам-Уайатта).
 
 1. Используя шаг сетки, равный 2 мм в результирующем масштабе (*1:4 000 000*), упростите линию с помощью метода Ли-Оупеншоу.
 
