repair python toolbox references

--- a/Ex01-PointSelection.Rmd
+++ b/Ex01-PointSelection.Rmd
@@ -7,11 +7,13 @@ __Цель задания__ — освоение методики автомат
 Задачи:
 
 1. Изучить принципы, заложенные в метод отбора (исключения) точек _Settlement Spacing_.
-2. Реализовать метод _Settlement Spacing_ в среде __ArcGIS Desktop__ с помощью среды автоматизации процессов геообработки __Model Builder__.
-3. Реализовать метод оценки графической нагрузки по сетке регулярных квадратов средствами __Model Builder__.
-4. Подготовить слой населенных пунктов субъекта РФ на основе данных _OpenStreetMap_.
-5. Осуществить автоматизированный отбор населенных пунктов для масштаба $1:4~000~000$.
-6. Произвести графическую оценку результатов генерализации.
+1. Реализовать метод _Settlement Spacing_ в среде __ArcGIS Desktop__ с помощью среды автоматизации процессов геообработки __Model Builder__.
+1. Реализовать метод оценки графической нагрузки по сетке регулярных квадратов средствами __Model Builder__.
+1. Преобразовать созданные модели в инструменты геообработки Python Toolbox на языке программирования Python.
+1. Подготовить слой населенных пунктов субъекта РФ на основе данных _OpenStreetMap_.
+1. Осуществить автоматизированный отбор населенных пунктов для масштаба $1:4~000~000$.
+1. Сравнить производительность созданных моделей и скриптов.
+1. Выполнить численную, графическую и географическую оценку результатов генерализации.
 
 ## Реализация алгоритма Settlement Spacing {-}
 
